[SC-78] - AACLI fail testing storedId
[SC-79] - Configuration Reloading only works when RetryAttempts are configured
[SC-80] - positional parameters do not get substituted in Mapped attr defs 
[SC-81] -  attribute-resolver.xml ScriptFile type causes IdP startup failure
[SC-82] - empty source attribute for conector computedID causes AttributeResolutionException

Changes in Release 1.1.2
=============================================
* Address case where, in theory, StoredID data connector could generate the same ID more than once
    overwrite the information for the previous record associated with that ID
* Minor memory usage improvements
* Pick up new lib versions
[SC-65] - java.lang.NoSuchMethodError: ch.qos.logback.classic.LoggerContext.shutdownAndReset()
    this was fixed in rebuild of 1.1.2

Changes in Release 1.1.1
=============================================
[SC-58] - The maxResultSize attribute in the LDAP DataConnector is being ignored
[SC-59] - RDBMS data connector throws NullPointerException when data source is null.
[SC-62] - Normalize LDAP SearchFilter String

Changes in Release 1.1.0
=============================================
- Attribute caching in LDAP and relational database connectors has been disabled by default until
  the cache is properly cleared when a user's session expires or is destroyed.

[SC-37] - Filtering engine results in intersection of policies; union of policies is desired
[SC-38] - StoredIDStore: invalid character in prepared statement (Oracle only)
[SC-39] - Add ability to explicitly deny the release attributes
[SC-40] - Allow macros within configuration resources to be expanded when the resource is loaded
[SC-42] - Allow for ResourceBackedMetadataProvider as a metadata provider resource type
[SC-43] - Create a new Resource type that can read information from a Subversion respository
[SC-44] - StoredIDStore Connection Resource Leak
[SC-45] - Upgrade to OpenSAML 2.2.0
[SC-46] - Upgrade to VT LDAP lib version 2.8.2