@@ -13,6 +13,7 @@ Changes in Release 1.1.3
 [SC-80] - positional parameters do not get substituted in Mapped attr defs 
 [SC-81] -  attribute-resolver.xml ScriptFile type causes IdP startup failure
 [SC-82] - empty source attribute for conector computedID causes AttributeResolutionException
+[SC-83] - IdP throws HTML error (instead of SAML error) whena persistentID cannot be found
 
 Changes in Release 1.1.2
 =============================================
